# roughfeel

./: Cargo.toml  README.md
.github/workflows/: test_rust_library.yaml
points_on_curve/: Cargo.toml
points_on_curve/examples/: tolerance.rs
points_on_curve/src/: lib.rs
rough_piet/: Cargo.toml
rough_piet/src/: kurbo_generator.rs
roughfeel/: Cargo.toml
roughfeel/examples/: heart_svg_path.rs  linear_path.rs  polygon.rs
roughfeel/src/: canvas.rs  lib.rs
roughfeel/src/graphics/: drawable.rs  drawable_maker.rs  drawable_ops.rs  geometry.rs  mod.rs  paint.rs  points_on_path.rs  render_context.rs  renderer.rs
roughfeel/src/graphics/drawable_maker/: generator.rs  mod.rs
roughfeel/src/graphics/filler/: dashed_filler.rs  dot_filler.rs  hatch_filler.rs  mod.rs  scan_line_hachure.rs  traits.rs  zig_zag_filler.rs  zig_zag_line_filler.rs
roughfeel/src/renderer_engine/: kurbo_drawable.rs  kurbo_drawable_maker.rs  mod.rs
svg_path_ops/: Cargo.toml
svg_path_ops/src/: lib.rs
