[package]
name = "roughfeel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.12.0"
euclid = "0.22.9"
num-traits = "0.2.17"
palette = "0.7.3"
piet = "0.6.2"
# piet-common = "0.6.2"
plotlib = "0.5.1"
points_on_curve = { version = "0.5.0", path = "../points_on_curve" }
rand = "0.8.5"
rand_chacha = { version = "0.3.1" }
rand_core = "0.6.4"
svg_path_ops = { version = "0.5.0", path = "../svg_path_ops" }
svgtypes = "0.13.0"
piet-common = {version = "0.6.2", features = ["png"]}

[lib]
doctest = false #Temporary